introduce an argument for --dedup-legal-notices option of jlink to optionally exclude certain modules' license files from de-duplication